# AutoNav_Sim

./: Dockerfile  Makefile  README.md  commands.md  compose.yaml
.github/workflows/: ci.yml
src/: save_map.sh
src/my_bot/: CMakeLists.txt  package.xml  setup.py
src/my_bot/config/: mapper_params_online_async.yaml  nav2_params.yaml  navigation.rviz  view_robot.rviz
src/my_bot/launch/: navigation.launch.py  rsp.launch.py  sim.launch.py  slam.launch.py
src/my_bot/maps/: my_map.pgm  my_map.yaml
src/my_bot/my_bot/: patrol.py  security_guard.py
src/my_bot/scripts/: ball_chaser.py  camera_test.py  patrol.py  security_guard.py
src/my_bot/test/: test_scripts.py  test_urdf.py
src/my_bot/urdf/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/my_bot/worlds/: intruder.world  obstacles.world  room.world
